--- a/app/views/sites/editPost.scala.html
+++ b/app/views/sites/editPost.scala.html
@@ -5,7 +5,7 @@ nav="site",
 title =  "食美特，不一样的生活"
 )(css="/assets/css/template/site.edit.css") {
 
-<div class="container clearfix" id="china">
+<div class="container clearfix" id="post">
     <div class="site-edit clearfix">
         <h2>申请小站</h2>
         <div  >
