--- a/app/views/sites/editSite.scala.html
+++ b/app/views/sites/editSite.scala.html
@@ -1,11 +1,11 @@
-@(user:Option[models.user.User],form: Form[controllers.SiteFormData]))
+@(user:Option[models.user.User],form: Form[controllers.SiteFormData])
 @views.html.template(
 user,
 nav="site",
 title =  "食美特，不一样的生活"
 )(css="/assets/css/template/site.edit.css") {
 
-<div class="container clearfix" id="home">
+<div class="container clearfix" id="site">
 
 
     <!--nav  end -->
