--- a/public/assets/css/template/site.edit.css
+++ b/public/assets/css/template/site.edit.css
@@ -12,7 +12,7 @@
  *
  */
 .site-edit{
-    min-height: 500px;
+/*    min-height: 500px;*/
     padding: 30px;
     background: white;
     -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
