--- a/app/views/sites/editPost.scala.html
+++ b/app/views/sites/editPost.scala.html
@@ -7,7 +7,7 @@ title =  "食美特，不一样的生活"
 
 <div class="container clearfix" id="post">
     <div class="site-edit clearfix">
-        <h2>申请小站</h2>
+        <h2>申请小镇</h2>
         <div  >
             <form id="J_TopicEditFm" class="edit-form" method="post" action="@controllers.routes.Themes.save">
                 <input type="hidden" name="id" value=''>
@@ -92,7 +92,7 @@ title =  "食美特，不一样的生活"
                              </dl>
 
                          </div>
-                        <p>选择相应的分类，让大家更容易找到你的小站</p>
+                        <p>选择相应的分类，让大家更容易找到你的小镇</p>
 
                     </div>
                 </div>
