--- a/app/views/sites/post.scala.html
+++ b/app/views/sites/post.scala.html
@@ -34,7 +34,7 @@ title =  "食美特，不一样的生活"
                     <dd class="ofh"><a href="/topic/3525.html" target="_blank">    名瓷 器世界 （中国文化报专访）</a></dd>
                 </dl>
                 <dl class="site">
-                    <dt>TA加入的小站</dt>
+                    <dt>TA加入的小镇</dt>
                     <dd><a href="/site/detail/528.html" target="_blank"><img src="http://img1.xiangqu.com/xiangqu/image/B13/B13C56A6B4AEDF8E3E1FBDDA807B4A84_198x198.jpg_50x10000.jpg" style="opacity: 1; ">最爱晒单</a></dd>
                     <dd><a href="/site/detail/359.html" target="_blank"><img src="http://img1.xiangqu.com/xiangqu/image/A3D/A3DA6597E52C2427483E0E87D155831D_198x198.jpg_50x10000.jpg" style="opacity: 1; ">想去限时购</a></dd>
                     <dd><a href="/site/detail/212.html" target="_blank"><img src="http://img1.xiangqu.com/xiangqu/image/285/2855B1E79CC7451B2117133A7A213BB7_640x640.jpg_50x10000.jpg">想去专题</a></dd>
@@ -107,17 +107,17 @@ title =  "食美特，不一样的生活"
         <div class="post-right">
             <div class="post-site">
                 <a><img width="180" height="180" src="/assets/temp/site.jpg"></a>
-                <h3 class="site-title"><a> xxxx xxxxx 小站</a></h3>
-                <div class="back-site"><a>返回小站</a> </div>
+                <h3 class="site-title"><a> xxxx xxxxx 小镇</a></h3>
+                <div class="back-site"><a>返回小镇</a> </div>
                 <div class="follow clearfix">
-                    <a class="follow-btn"> + 加入小站</a>
+                    <a class="follow-btn"> + 加入小镇</a>
                     <!-- <div class="followed-btn-big">已关注<span class="mr5 ml5">|</span><a rel="removefollow" data-followtype="5" data-usernick="duanyu200888" data-userid="3" href="javascript:;">取消</a></div>-->
                 </div>
             </div>
 
                 <div class="site-others">
                     <dl class="posts">
-                        <dt>小站动态</dt>
+                        <dt>小镇动态</dt>
                         <dd class="ofh"><a href="/topic/3585.html" target="_blank">器世界 精品茶具小编为你讲解喝功夫茶的品茗八法</a></dd>
                         <dd class="ofh"><a href="/topic/3576.html" target="_blank">器世界 手工柴烧侧把壶  原创设计 品质生活</a></dd>
                         <dd class="ofh"><a href="/topic/3574.html" target="_blank">器世界-人和家兴 手绘婴戏图茶壶   原创设计品质生活</a></dd>
@@ -126,7 +126,7 @@ title =  "食美特，不一样的生活"
 
                     </dl>
                     <dl class="members">
-                        <dt>小站居民</dt>
+                        <dt>小镇居民</dt>
                         <dd><a href="/site/detail/528.html" target="_blank"><img src="http://img1.xiangqu.com/xiangqu/image/B13/B13C56A6B4AEDF8E3E1FBDDA807B4A84_198x198.jpg_50x10000.jpg" style="opacity: 1; ">最爱晒单</a></dd>
                         <dd><a href="/site/detail/359.html" target="_blank"><img src="http://img1.xiangqu.com/xiangqu/image/A3D/A3DA6597E52C2427483E0E87D155831D_198x198.jpg_50x10000.jpg" style="opacity: 1; ">想去限时购</a></dd>
                         <dd><a href="/site/detail/212.html" target="_blank"><img src="http://img1.xiangqu.com/xiangqu/image/285/2855B1E79CC7451B2117133A7A213BB7_640x640.jpg_50x10000.jpg">想去专题</a></dd>
