--- a/app/views/sites/site.scala.html
+++ b/app/views/sites/site.scala.html
@@ -12,17 +12,17 @@ title =  "食美特，不一样的生活"
           <img width="200" height="200" src="/assets/temp/site.jpg">
       </div>
        <div class="site-info">
-           <h3>小站小站小站小站小站 </h3>
+           <h3>小镇小镇小镇小镇小镇 </h3>
            <div class="intro">介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍</div>
            <div class="tags clearfix">
                <label >相关标签：</label>
                <ul>
-                   <li> <a>小站</a> </li>
-                   <li> <a>小站</a> </li>
-                   <li> <a>小站</a> </li>
-                   <li> <a>小站</a> </li>
-                   <li> <a>小站</a> </li>
-                   <li> <a>小站</a> </li>
+                   <li> <a>小镇</a> </li>
+                   <li> <a>小镇</a> </li>
+                   <li> <a>小镇</a> </li>
+                   <li> <a>小镇</a> </li>
+                   <li> <a>小镇</a> </li>
+                   <li> <a>小镇</a> </li>
                </ul>
            </div>
 
@@ -54,7 +54,7 @@ title =  "食美特，不一样的生活"
            <div class="join clearfix">
                <div class="love-num">已有1002居民</div>
                <div class="follow">
-                   <a class="follow-btn"> + 加入小站</a>
+                   <a class="follow-btn"> + 加入小镇</a>
                    <!-- <div class="followed-btn-big">已关注<span class="mr5 ml5">|</span><a rel="removefollow" data-followtype="5" data-usernick="duanyu200888" data-userid="3" href="javascript:;">取消</a></div>-->
                </div>
                <div class="invite">
@@ -63,7 +63,7 @@ title =  "食美特，不一样的生活"
            </div>
        </div>
        <div class="recommend">
-                <h3>推荐小站 <a class="more">查看更多</a></h3>
+                <h3>推荐小镇 <a class="more">查看更多</a></h3>
                 <ul>
                     <li class="ofh" >
                         <a class="clearfix">
@@ -128,7 +128,7 @@ title =  "食美特，不一样的生活"
         <div class="hd ">
             <div class="site-filter clearfix">
                 <div class="filter">
-                    <h2> xxxx 小站</h2>
+                    <h2> xxxx 小镇</h2>
                     <a class="current"> 最新 </a>
                     <a>最热</a>
                 </div>
