--- a/app/views/users/account/payment.scala.html
+++ b/app/views/users/account/payment.scala.html
@@ -54,9 +54,8 @@ user
                          <div class="help">
                              <div class="help-title">小提示</div>
                              <ul>
-                                 <li>为了确保您能够获得返利，必须填写您的支付宝账号，并确保您的支付宝账号是正确的哦</li>
+                                 <li>为了确保您能够获得集分宝，必须填写您的支付宝账号，并确保您的支付宝账号是正确的哦</li>
                                  <li>为了提醒您收到集分宝，请您填写手机号和QQ号，我们将竭诚为您提供最好的服务。</li>
-
                              </ul>
                          </div>
                      </div>
