--- a/app/views/baobei/view.scala.html
+++ b/app/views/baobei/view.scala.html
@@ -15,7 +15,7 @@ description = goods.intro
             <!-- pic show-->
                 <div class="pic-box">
 
-                    <a class="pic-link"  href='@if(goods.clickUrl.isEmpty || goods.clickUrl.get.trim==""){@goods.detailUrl}else{@goods.clickUrl.get}' target="_blank"  rel="nofollow">
+                    <a class="pic-link"  href='@goods.clickUrl' target="_blank"  rel="nofollow">
 
                         @for(img<-goods.itemPics.split("&")){
                         <img  src='@(img+"_460x460.jpg")' alt="@goods.name" width="460" />
@@ -31,7 +31,7 @@ description = goods.intro
                             </dl>
                         </div>
                     </div>
-                    <a class="bbl-btn pic-more" href='@if(goods.clickUrl.isEmpty || goods.clickUrl.get.trim==""){@goods.detailUrl}else{@goods.clickUrl.get}' >查看更多图片&gt;&gt;</a>
+                    <a class="bbl-btn pic-more" href='@goods.clickUrl' >查看更多图片&gt;&gt;</a>
                 </div>
 
 
@@ -75,7 +75,7 @@ description = goods.intro
                                  <span class="price-promotion"> ¥@goods.price</span>
                              </div>
 
-                          <a class="buy-btn"  href='@if(goods.clickUrl.isEmpty || goods.clickUrl.get.trim==""){@goods.detailUrl}else{@goods.clickUrl.get}'  target="_blank" rel="nofollow">去看看 &gt;&gt; </a>
+                          <a class="buy-btn"  href='@goods.clickUrl'  target="_blank" rel="nofollow">去看看 &gt;&gt; </a>
 
                          </dd>
                      <dd class="shareTips">
