--- a/app/views/template.scala.html
+++ b/app/views/template.scala.html
@@ -11,7 +11,6 @@
     <link rel="shortcut icon" type="image/png" href="/assets/favicon.png">
     <link rel="stylesheet" href="/assets/css/global/global.css?v=2013052601">
     <link rel="stylesheet" href="@css?v=2013052601">
-    <script src="http://l.tbcdn.cn/apps/top/x/sdk.js?appkey=21136607"></script>
 </head>
 <body id="J_Page">
 
@@ -155,8 +154,8 @@
                     </div>
 
                     <div class="footer-erweima">
-                        <p>扫微信二维码</p>
-                        <p>每天有奖问答</p>
+                        <p>扫微信二维码,每天有奖问答</p>
+
                     </div>
                 </div>
             </div>
