--- a/app/views/qqapps/fanjijie.scala.html
+++ b/app/views/qqapps/fanjijie.scala.html
@@ -91,16 +91,17 @@
 
             </a>
             <div class="others-wrap">
-            <span><script type="text/javascript">
+            <span class="others-share" style="width: 50px;padding-right: 15px;">
+                <script type="text/javascript">
                 (function(){
                     var p = {
                         url:location.href,
                         showcount:'0',/*是否显示分享总数,显示：'1'，不显示：'0' */
-                        desc:'',/*默认分享理由(可选)*/
-                        summary:'',/*分享摘要(可选)*/
-                        title:'',/*分享标题(可选)*/
+                        desc:'@goods.intro',/*默认分享理由(可选)*/
+                        summary:'@goods.name',/*分享摘要(可选)*/
+                        title:'@goods.name',/*分享标题(可选)*/
                         site:'',/*分享来源 如：腾讯网(可选)*/
-                        pics:'', /*分享图片的路径(可选)*/
+                        pics:'@goods.pic', /*分享图片的路径(可选)*/
                         style:'102',
                         width:88,
                         height:30
@@ -113,10 +114,13 @@
                 })();
             </script>
 <script src="http://qzonestyle.gtimg.cn/qzone/app/qzlike/qzopensl.js#jsdate=20111201" charset="utf-8"></script>
+
             </span>
                 <span class="want-to-buy">有<i>@goods.loveNum</i>人想买</span>
-                <a  class="others-say"  href="javascript:void(0);" onclick="fusion2.nav.open({url : '@goods.clickUrl.getOrElse(goods.detailUrl)'}); return false;">看看买过的人怎么说&gt;&gt;</a>
+
             </div>
+            <div class="clear"></div>
+            <a  class="others-say"  href="javascript:void(0);" onclick="fusion2.nav.open({url : '@goods.clickUrl.getOrElse(goods.detailUrl)'}); return false;">看看买过的人怎么说&gt;&gt;</a>
         </div>
     </div>
 </div>
