--- a/public/assets/css/template/fanjijie.css
+++ b/public/assets/css/template/fanjijie.css
@@ -226,12 +226,15 @@
 }
 
 .goods-item-buy .others-wrap {
+    margin-top: 10px;
     float: right;
-    width: 240px;
+    width:180px;
     text-align: right
 }
 
 .goods-item-buy .want-to-buy {
+    margin-right: 5px;
+    float: right;
     display: block;
     padding-top: 5px;
     font: bold 12px/16px SimSun;
@@ -246,8 +249,8 @@
 }
 
 .goods-item-buy .others-say {
+    float: right;
     display: block;
-    margin-top: 10px;
     font: bold 12px/16px SimSun;
     color: #666;
     text-decoration: underline
@@ -351,4 +354,8 @@ li.item-5 a:hover i {
 .pagin span.current{
     background: #CF2D2D;
     color: white;
+}
+.others-wrap .others-share{
+    display: block;
+    float: right;
 }
