--- a/app/views/qqapps/fanjijie.scala.html
+++ b/app/views/qqapps/fanjijie.scala.html
@@ -44,9 +44,9 @@
         <li @if(tag=="反季品牌"){class="c"}><a href='@controllers.routes.QQApps.fanjijie("反季品牌",1,1)'><i></i>品牌</a></li>
     </ul>
         <ul class="filter">
-            <li @if(s==1){class="c"}><a href='@controllers.routes.QQApps.fanjijie(tag,s,1)'>爆款</a></li>
-            <li @if(s==2){class="c"}><a href='@controllers.routes.QQApps.fanjijie(tag,s,1)'>最新</a></li>
-            <li @if(s==3){class="c"}><a href='@controllers.routes.QQApps.fanjijie(tag,s,1)'>最热</a></li>
+            <li @if(s==1){class="c"}><a href='@controllers.routes.QQApps.fanjijie(tag,1,1)'>爆款</a></li>
+            <li @if(s==2){class="c"}><a href='@controllers.routes.QQApps.fanjijie(tag,2,1)'>最新</a></li>
+            <li @if(s==3){class="c"}><a href='@controllers.routes.QQApps.fanjijie(tag,3,1)'>最热</a></li>
         </ul>
     </div>
 
