--- a/app/views/admin/msgs/systemMsgs.scala.html
+++ b/app/views/admin/msgs/systemMsgs.scala.html
@@ -34,82 +34,6 @@
                     <input type="hidden" name="currentPage" id="J_currentPage" value="1">
 
 
-                    <div class="control-group">
-                        <label class="control-label" for="name">名称</label>
-                        <div class="controls">
-                            <input type="text" id="name" name="name" value=''  placeholder="标签名称" >
-                        </div>
-                    </div>
-
-                    <div class="control-group">
-                        <label class="control-label">分类</label>
-                        <div class="controls">
-                            <select name="cid" id="J_cid">
-                                <option value=""   >所有分类</option>
-                                @for(cate<-models.Cate.values.toList.sortBy(x=>x.id)){
-                                <option value="@cate.id">@cate</option>
-
-                                }
-                            </select>
-                            <select name="groupId" id="J_groupId">
-                                <option value=''></option>
-                                <optgroup id="J_groupId_opt" >
-
-                                </optgroup>
-                            </select>
-                        </div>
-                    </div>
-
-                    <div class="control-group">
-                        <label class="control-label" >审核状态</label>
-                        <div class="controls">
-                            <div class="radio">
-                                <input type="radio"   name="checkState" value=""  > 所有
-                            </div>
-                            <div class="radio">
-                                <input type="radio"   name="checkState" value="0"> 未审核
-                            </div>
-                            <div class="radio">
-                                <input type="radio"   name="checkState" value="1" > 审核通过
-                            </div>
-                            <div class="radio">
-                                <input type="radio"   name="checkState" value="2" >  审核失败
-                            </div>
-
-                        </div>
-                    </div>
-
-                    <div class="control-group">
-                        <label class="control-label" >是否置顶</label>
-                        <div class="controls">
-                            <div class="radio">
-                                <input type="radio"   name="isTop" value="" > 所有
-                            </div>
-                            <div class="radio">
-                                <input type="radio"   name="isTop" value="true"> 置顶
-                            </div>
-                            <div class="radio">
-                                <input type="radio"   name="isTop" value="false"> 不置顶
-                            </div>
-
-                        </div>
-                    </div>
-                    <div class="control-group">
-                        <label class="control-label" >是否强调</label>
-                        <div class="controls">
-                            <div class="radio">
-                                <input type="radio"   name="isHighlight" value=""  > 所有
-                            </div>
-                            <div class="radio">
-                                <input type="radio"   name="isHighlight" value="true" > 强调
-                            </div>
-                            <div class="radio">
-                                <input type="radio"   name="isHighlight" value="false" > 不强调
-                            </div>
-
-                        </div>
-                    </div>
-
 
 
                     <div class="control-group">
@@ -133,14 +57,9 @@
             <div class="controls">
                 <select id="J_select" name="action">
                     <option value="-1">批量动作</option>
-                    <!--  <option value="0">批量更新排序</option>-->
                     <option value="1">批量审核通过</option>
                     <option value="2">批量审核不通过</option>
-                    <option value="3">批量置顶</option>
-                    <option value="4">批量不置顶</option>
-                    <option value="5">批量强调</option>
-                    <option value="6">批量不强调</option>
-                    <option value="7">批量删除</option>
+                    <option value="3">批量删除</option>
                 </select>
 
                 <button  class="btn btn-info" id="J_batchAction" data-toggle="modal" data-target="#J_batchModal" >批量处理 </button>
@@ -183,7 +102,7 @@
 
             @page.prev.map { page =>
             <li class="prev">
-                <a href="controllers.admin.routes.Msgs.system(page)">Prev</a>
+                <a href="controllers.admin.routes.Msgs.systemMsgs(page)">Prev</a>
             </li>
             }.getOrElse {
             <li class="prev disabled">
@@ -192,17 +111,17 @@
             }
             @for(num <-page.nums){
             @if(num==page.currentPage){
-            <li class="active"><a href="@controllers.admin.routes.Msgs.system(num)">@num</a></li>
+            <li class="active"><a href="@controllers.admin.routes.Msgs.systemMsgs(num)">@num</a></li>
             }else {
 
-            <li><a href="@controllers.admin.routes.Msgs.system(num)">@num</a></li>
+            <li><a href="@controllers.admin.routes.Msgs.systemMsgs(num)">@num</a></li>
             }
 
             }
 
             @page.next.map { page =>
             <li class="next">
-                <a href="@controllers.admin.routes.Msgs.system(page)">Next</a>
+                <a href="@controllers.admin.routes.Msgs.systemMsgs(page)">Next</a>
             </li>
             }.getOrElse {
             <li class="next disabled">
