--- a/app/views/qqapps/fanjijie.scala.html
+++ b/app/views/qqapps/fanjijie.scala.html
@@ -95,7 +95,7 @@
                 <script type="text/javascript">
                 (function(){
                     var p = {
-                        url:location.href,
+                        url:'http://rc.qzone.qq.com/100716416?via=DLJ',
                         showcount:'0',/*是否显示分享总数,显示：'1'，不显示：'0' */
                         desc:'@goods.intro',/*默认分享理由(可选)*/
                         summary:'@goods.name',/*分享摘要(可选)*/
