--- a/app/views/admin/template.scala.html
+++ b/app/views/admin/template.scala.html
@@ -102,6 +102,16 @@
                         <li><a href='@controllers.admin.routes.Adverts.channel("miss")'>主题频道管理</a></li>
                     </ul>
                 </li>
+
+                <li class='submenu @if(nav=="site"){active open}'>
+                    <a href="#"><i class="icon icon-th-list"></i> <span>小镇</span></a>
+                    <ul>
+                        <li><a href='@controllers.admin.routes.Sites.siteList(1)'>小镇管理</a></li>
+                        <li><a href='@controllers.admin.routes.Sites.postList(1)'>帖子管理</a></li>
+
+                    </ul>
+                </li>
+
                 <li class='submenu @if(nav=="msg"){active open}'>
                 <a href="#"><i class="icon icon-th-list"></i> <span>站内信</span></a>
                 <ul>
