add system msg function

--- a/app/views/admin/template.scala.html
+++ b/app/views/admin/template.scala.html
@@ -104,7 +104,7 @@
                 </li>
 
                 <li class='submenu @if(nav=="site"){active open}'>
-                    <a href="#"><i class="icon icon-th-list"></i> <span>小镇</span></a>
+                    <a href="#"><i class="icon icon-th-list"></i> <span>小镇管理</span></a>
                     <ul>
                         <li><a href='@controllers.admin.routes.Sites.siteList(1)'>小镇管理</a></li>
                         <li><a href='@controllers.admin.routes.Sites.postList(1)'>帖子管理</a></li>
@@ -113,7 +113,7 @@
                 </li>
 
                 <li class='submenu @if(nav=="msg"){active open}'>
-                <a href="#"><i class="icon icon-th-list"></i> <span>站内信</span></a>
+                <a href="#"><i class="icon icon-th-list"></i> <span>站内信管理</span></a>
                 <ul>
                     <li><a href='@controllers.admin.routes.Msgs.systemMsgs(1)'>系统站内信</a></li>
                     <li><a href='@controllers.admin.routes.Msgs.atMsgs(1)'>私信</a></li>
