--- a/app/views/admin/msgs/filterSystemMsgs.scala.html
+++ b/app/views/admin/msgs/filterSystemMsgs.scala.html
@@ -1,4 +1,4 @@
-@(manager:models.admin.Manager,page:models.Page[models.msg.SystemMsg])
+@(manager:models.admin.Manager,page:models.Page[models.msg.SystemMsg],form: Form[controllers.admin.SystemMsgFilterFormData])
 @views.html.admin.template(manager,"msg") {
 
 
@@ -31,12 +31,12 @@
             </div>
             <div class="widget-content nopadding">
                 <form class=" form-horizontal" id="J_filterForm"  method="get" action="@controllers.admin.routes.Msgs.filterSystemMsgs">
-                    <input type="hidden" name="currentPage" id="J_currentPage" value="1">
+                    <input type="hidden" name="currentPage" id="J_currentPage" value='@form("currentPage").value'>
 
                     <div class="control-group">
                         <label class="control-label">标题</label>
                         <div class="controls">
-                            <input type="text"  name="title" value=''  placeholder="标题" >
+                            <input type="text"  name="title" value='@form("title").value'  placeholder="标题" >
                         </div>
                     </div>
                     <div class="control-group">
@@ -56,7 +56,6 @@
 <div class="row-fluid">
     <div class="well">
         <form method="post" id="J_batchForm" action="@controllers.admin.routes.Msgs.batchSystemMsgs">
-            <input type="hidden" id="J_url" name="url" value="">
             <div class="controls">
                 <select id="J_select" name="action">
                     <option value="-1">批量动作</option>
@@ -86,7 +85,7 @@
                     <td>@item.id</td>
                     <td>@item.title</td>
                     <td>@item.content</td>
-                    <td>@if(item.status==0){<span class="label label-warning">未发送</span>} @if(item.status ==1){<span class="label label-success">已发送</span>}</td>
+                    <td>@if(item.status==0){<span class="label label-warning">未审核</span>} @if(item.status ==1){<span class="label label-success">已审核</span>}</td>
                     <td>@item.addTime</td>
                     <td>
                         <a href="@controllers.admin.routes.Msgs.editSystemMsg(item.id.get)"><i class="icon-edit"></i></a>
