--- a/app/views/admin/sites/filterSites.scala.html
+++ b/app/views/admin/sites/filterSites.scala.html
@@ -1,4 +1,4 @@
-@(manager:models.admin.Manager,page:models.Page[models.site.Site])
+@(manager:models.admin.Manager,page:models.Page[models.site.Site],form: Form[controllers.admin.SiteFilterFormData]))
 @views.html.admin.template(manager,"site") {
 
 
@@ -14,90 +14,91 @@
 
 <div class="container-fluid">
 
-<div class="row-fluid">
-    <div class="span12">
-        <div class="widget-box clearfix">
-            <div class="widget-title">
+
+    <div class="row-fluid">
+        <div class="span12">
+            <div class="widget-box clearfix">
+                <div class="widget-title">
         <span class="icon">
             <i class="icon-pencil"></i>
         </span>
-                <h5>小镇筛选</h5>
-            </div>
-            <div class="widget-content nopadding">
-                <form class=" form-horizontal" id="J_filterForm"  method="get" action="@controllers.admin.routes.Sites.filterSites">
-                    <input type="hidden" name="currentPage" id="J_currentPage" value="1">
+                    <h5>小镇筛选</h5>
+                </div>
+                <div class="widget-content nopadding">
+                    <form class=" form-horizontal" id="J_filterForm"  method="get" action="@controllers.admin.routes.Sites.filterSites">
+                        <input type="hidden" name="currentPage" id="J_currentPage" value='@form("currentPage").value'>
 
-                    <div class="control-group">
-                        <label class="control-label">创建者ID</label>
-                        <div class="controls">
-                            <input type="text"  name="uid" value=''  placeholder="创建者ID" >
-                        </div>
-                    </div>
-
-                    <div class="control-group">
-                        <label class="control-label">分类</label>
-                        <div class="controls">
-                            <select name="cid" id="cid">
-                                <option value="">所有分类</option>
-                                @for(cate<-models.site.SiteCate.values.toList.sortBy(x=>x.id)){
-                                <option value="@cate.id">@cate</option>
-
-                                }
-                            </select>
-                        </div>
-                    </div>
-
-                    <div class="control-group">
-                        <label class="control-label">小镇标题</label>
-                        <div class="controls">
-                            <input type="text"  name="title" value=''  placeholder="标签名称" >
-                        </div>
-                    </div>
-                    <div class="control-group">
-                        <label class="control-label" >状态</label>
-                        <div class="controls">
-                            <div class="radio">
-                                <input type="radio" name="status" value=""> 所有
+                        <div class="control-group">
+                            <label class="control-label">创建者ID</label>
+                            <div class="controls">
+                                <input type="text"  name="uid" value='@form("uid").value'  placeholder="创建者ID" >
                             </div>
-                            <div class="radio">
-                                <input type="radio"  name="status" value="0"> 未审核
-                            </div>
-                            <div class="radio">
-                                <input type="radio" name="status" value="1"> 审核通过
-                            </div>
-                            <div class="radio">
-                                <input type="radio" name="status" value="2"> 审核不通过
-                            </div>
-
                         </div>
-                    </div>
-                    <div class="control-group">
-                        <label class="control-label" >时间</label>
-                        <div class="controls">
-                            <div class="radio">
-                                开始时间： <input type="date" class="date"  format="yyyy-MM-dd"  name="startDate" value="">
+
+                        <div class="control-group">
+                            <label class="control-label">分类</label>
+                            <div class="controls">
+                                <select name="cid" id="cid">
+                                    <option value=""  @if(form("cid").value.getOrElse("none")=="none"){ selected="true" } >所有分类</option>
+                                    @for(cate<-models.site.SiteCate.values.toList.sortBy(x=>x.id)){
+                                    <option value="@cate.id" @if(form("cid").value.getOrElse("none")==cate.id.toString){ selected="true" }>@cate</option>
+                                    }
+                                </select>
                             </div>
-                            <div class="radio">
-                                结束时间：    <input type="date" class="date" format="yyyy-MM-dd"   name="endDate" value="" >
+                        </div>
+
+                        <div class="control-group">
+                            <label class="control-label">小镇标题</label>
+                            <div class="controls">
+                                <input type="text"  name="title" value='@form("title").value'  placeholder="标签名称" >
                             </div>
-
-
                         </div>
-                    </div>
-                    <div class="control-group">
-                        <div class="controls">
 
-                            <input type="submit" class="btn btn-info" value="筛选"/>
+                        <div class="control-group">
+                            <label class="control-label" >状态</label>
+                            <div class="controls">
+                                <div class="radio">
+                                    <input type="radio"   name="status" value=""  @if(form("status").value.isEmpty){ checked="true" }> 所有
+                                </div>
+                                <div class="radio">
+                                    <input type="radio"   name="status" value="0" @if(form("status").value.getOrElse("none")=="0"){ checked="true" } > 未审核
+                                </div>
+                                <div class="radio">
+                                    <input type="radio"   name="status" value="1"  @if(form("status").value.getOrElse("none")=="1"){ checked="true" }> 审核通过
+                                </div>
+                                <div class="radio">
+                                    <input type="radio"   name="status" value="2"  @if(form("status").value.getOrElse("none")=="2"){ checked="true" }>  审核不通过
+                                </div>
+
+                            </div>
                         </div>
-                    </div>
-                </form>
+
+                        <div class="control-group">
+                            <label class="control-label" >时间</label>
+                            <div class="controls">
+                                <div class="radio">
+                                    开始时间： <input type="date" class="date"  format="yyyy-MM-dd"  name="startDate" value='@form("startDate").value'>
+                                </div>
+                                <div class="radio">
+                                    结束时间：    <input type="date" class="date" format="yyyy-MM-dd"   name="endDate" value='@form("endDate").value' >
+                                </div>
 
 
+                            </div>
+                        </div>
+                        <div class="control-group">
+                            <div class="controls">
+
+                                <input type="submit" class="btn btn-info" value="筛选"/>
+                            </div>
+                        </div>
+                    </form>
+
+
+                </div>
             </div>
         </div>
     </div>
-</div>
-
 <div class="row-fluid">
     <div class="well">
         <form method="post" id="J_batchForm" action="@controllers.admin.routes.Sites.batchSites">
