--- a/app/views/template.scala.html
+++ b/app/views/template.scala.html
@@ -88,7 +88,7 @@
                         <li><a href="@controllers.users.routes.UsersMsg.at">查看@@我的</a></li>
                         <li><a href="@controllers.users.routes.UsersMsg.love">查看喜欢我的</a></li>
                         <li><a href="@controllers.users.routes.UsersMsg.comment">查看回复我的</a></li>
-                        <li class="last"><a href="@controllers.users.routes.UsersMsg.system">查看通知</a></li>
+                        <li class="last"><a href="@controllers.users.routes.UsersMsg.system(1)">查看通知</a></li>
                     </ul>
                 </div>
                 <div class="person fr clearfix">
