--- a/app/views/admin/template.scala.html
+++ b/app/views/admin/template.scala.html
@@ -116,6 +116,7 @@
                 <a href="#"><i class="icon icon-th-list"></i> <span>站内信管理</span></a>
                 <ul>
                     <li><a href='@controllers.admin.routes.Msgs.systemMsgs(1)'>系统站内信</a></li>
+                    <li><a href='@controllers.admin.routes.Msgs.systemMsgReceivers(1)'>系统站内信收件人</a></li>
                     <li><a href='@controllers.admin.routes.Msgs.atMsgs(1)'>私信</a></li>
                     <li><a href='@controllers.admin.routes.Msgs.favorMsgs(1)'>喜欢站内信</a></li>
                     <li><a href='@controllers.admin.routes.Msgs.replyMsgs(1)'>回复站内信</a></li>
